--- a/styles.css
+++ b/styles.css
@@ -1,42 +1,83 @@
+.mamma {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  padding-top: 30pt;
+
+}
+
+
 .Header img {
-  width: 50%;
+  width: 350pt;
   height: auto;
-  margin-left: 250pt;
+  margin-left: 15pt;
+
+}
+
+.Texten {
+  width: 350pt;
+  height: auto;
+  margin-left: 20pt;
+  margin-right: 20pt;
+
 }
 
 
 h1 {
 
-  font-family: Arial;
+  font-family: "Didot", Times, serif;
   font-size: 40pt;
-margin-bottom: 20pt;
-margin-left: 400pt;
-text-decoration: underline;
+margin-bottom: 5pt;
+margin-top: 0pt;
 }
 
 .Prestentation {
-  font-family: Arial;
+  font-family: "Cambria";
   font-size: 12pt;
-  margin-left: 100pt;
+  margin-bottom: 20pt;
+
 
 }
 
 h3 {
 
-  font-family: Arial;
-  font-size: 30pt;
-  margin-bottom: 10pt;
-  margin-left: 400pt;
-  margin-top: 20pt;
-  text-decoration: underline;
+  font-family: "Didot", Times, serif;
+  font-size: 40pt;
+  margin-bottom: 5pt;
+  margin-top: 0pt;
+}
+
+.mail {
+font-family: "Cambria";
+}
+
+
+.Instagram {
+  font-family: "Cambria";
+  margin-bottom: 15pt;
+  color: black;
+}
+
+a {
+  color: black;
+  text-decoration: none;
 }
 
 .pascal1 {
-  width: 33%;
-  height:auto;
+  width: 375pt;
+  height: auto;
 }
 
-.spread img {
-  width: 33%;
-  height: auto;
+.mamma2 {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: flex-end;
+
+}
+.copy {
+  font-family: "Helvetica Neue";
+  font-size: 8pt;
+  margin-top: 50pt;
 }
